optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_noop_dev_mode.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, serverStuff$, $ } from '@qwik.dev/core';

export const App = component$(() => {
	const stuff = useStore();
	serverStuff$(async () => {
		// should be removed but keep scope
		console.log(stuff.count)
	})
	serverStuff$(async () => {
		// should be removed
	})

	return (
		<Cmp>
			<p class="stuff"
				shouldRemove$={() => stuff.count}
				onClick$={() => console.log('warn')}
			>
				Hello Qwik
			</p>
		</Cmp>
	);
});

============================= ./example_noop_dev_mode.tsx_App_component_serverStuff_nmX08tX3gCM.js (ENTRY POINT)==

export const App_component_serverStuff_nmX08tX3gCM = async () => {
	const [stuff] = useLexicalScope();
	console.log(stuff.count);
};


None
/*
{
  "origin": "example_noop_dev_mode.tsx",
  "name": "App_component_serverStuff_nmX08tX3gCM",
  "entry": null,
  "displayName": "example_noop_dev_mode.tsx_App_component_serverStuff",
  "hash": "nmX08tX3gCM",
  "canonicalFilename": "example_noop_dev_mode.tsx_App_component_serverStuff_nmX08tX3gCM",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_serverStuff_nmX08tX3gCM",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_noop_dev_mode.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_App_component_serverStuff_nmX08tX3gCM = () => import("./example_noop_dev_mode.tsx_App_component_serverStuff_nmX08tX3gCM.js");
const i_App_component_serverStuff_1_tr0kky31M4E = () => import("./example_noop_dev_mode.tsx_App_component_serverStuff_1_tr0kky31M4E.js");
const i_App_component_BaANpMtVD1s = () => import("./example_noop_dev_mode.tsx_App_component_BaANpMtVD1s.js");
export const App = componentQrl(qrl(i_App_component_BaANpMtVD1s, "App_component_BaANpMtVD1s"));


None
============================= ./example_noop_dev_mode.tsx_App_component_BaANpMtVD1s.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const App_component_BaANpMtVD1s = () => {
	const stuff = useStore();
	serverStuffQrl(qrl(i_App_component_serverStuff_nmX08tX3gCM, "App_component_serverStuff_nmX08tX3gCM", [stuff]));
	serverStuffQrl(qrl(i_App_component_serverStuff_1_tr0kky31M4E, "App_component_serverStuff_1_tr0kky31M4E"));
	return _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", {
		shouldRemove$: serverStuffQrl(qrl(i_App_component_serverStuff_1_tr0kky31M4E, "App_component_serverStuff_1_tr0kky31M4E")),
		on:click: serverStuffQrl(qrl(i_App_component_serverStuff_nmX08tX3gCM, "App_component_serverStuff_nmX08tX3gCM", [stuff]))
	}, { class: "stuff" }, "Hello Qwik", 3, null), 3, null);
};


None
/*
{
  "origin": "example_noop_dev_mode.tsx",
  "name": "App_component_BaANpMtVD1s",
  "entry": null,
  "displayName": "example_noop_dev_mode.tsx_App_component",
  "hash": "BaANpMtVD1s",
  "canonicalFilename": "example_noop_dev_mode.tsx_App_component_BaANpMtVD1s",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_BaANpMtVD1s",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= ./example_noop_dev_mode.tsx_App_component_serverStuff_1_tr0kky31M4E.js (ENTRY POINT)==

export const App_component_serverStuff_1_tr0kky31M4E = async () => {};


None
/*
{
  "origin": "example_noop_dev_mode.tsx",
  "name": "App_component_serverStuff_1_tr0kky31M4E",
  "entry": null,
  "displayName": "example_noop_dev_mode.tsx_App_component_serverStuff_1",
  "hash": "tr0kky31M4E",
  "canonicalFilename": "example_noop_dev_mode.tsx_App_component_serverStuff_1_tr0kky31M4E",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_serverStuff_1_tr0kky31M4E",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
