optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_of_synchronous_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { sync$, component$ } from "@qwik.dev/core";

export default component$(() => {
return (
	<>
		<input onClick$={sync$(function(event, target) {
			// comment should be removed
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => {
			event.preventDefault();
		})}/>
		<input onClick$={sync$((event, target) => event.preventDefault())}/>
	</>
);
});

============================= test.tsx_component_input_onClick_2_sync_BShSpVtqLBE.tsx (ENTRY POINT)==

export const component_input_onClick_2_sync_BShSpVtqLBE = (event, target)=>event.preventDefault();


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_2_sync_BShSpVtqLBE",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_2_sync",
  "hash": "BShSpVtqLBE",
  "canonicalFilename": "test.tsx_component_input_onClick_2_sync_BShSpVtqLBE",
  "path": "",
  "extension": "tsx",
  "parent": "onClick_2",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    324,
    365
  ]
}
*/
============================= test.tsx_component_input_onClick_1_sync_Hp6rAUCNYXQ.tsx (ENTRY POINT)==

export const component_input_onClick_1_sync_Hp6rAUCNYXQ = (event, target)=>{
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_1_sync_Hp6rAUCNYXQ",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_1_sync",
  "hash": "Hp6rAUCNYXQ",
  "canonicalFilename": "test.tsx_component_input_onClick_1_sync_Hp6rAUCNYXQ",
  "path": "",
  "extension": "tsx",
  "parent": "onClick_1",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    243,
    294
  ]
}
*/
============================= test.tsx_component_ZUK1E201Ins.tsx (ENTRY POINT)==

import { _jsxSorted, qrl, syncQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_BShSpVtqLBE = ()=>import("./test.tsx_component_input_onClick_2_sync_BShSpVtqLBE");
const i_Hp6rAUCNYXQ = ()=>import("./test.tsx_component_input_onClick_1_sync_Hp6rAUCNYXQ");
const i_Li10Dm7YKnw = ()=>import("./test.tsx_component_input_onClick_sync_Li10Dm7YKnw");
export const component_ZUK1E201Ins = ()=>{
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_Li10Dm7YKnw, "component_input_onClick_sync_Li10Dm7YKnw")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_Hp6rAUCNYXQ, "component_input_onClick_1_sync_Hp6rAUCNYXQ")) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("input", { on:click: /*#__PURE__*/ syncQrl(/*#__PURE__*/ qrl(i_BShSpVtqLBE, "component_input_onClick_2_sync_BShSpVtqLBE")) }, null, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    379
  ]
}
*/
============================= test.tsx_component_input_onClick_sync_Li10Dm7YKnw.tsx (ENTRY POINT)==

export const component_input_onClick_sync_Li10Dm7YKnw = function(event, target) {
	event.preventDefault();
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_input_onClick_sync_Li10Dm7YKnw",
  "entry": null,
  "displayName": "test.tsx_component_input_onClick_sync",
  "hash": "Li10Dm7YKnw",
  "canonicalFilename": "test.tsx_component_input_onClick_sync_Li10Dm7YKnw",
  "path": "",
  "extension": "tsx",
  "parent": "onClick",
  "ctxKind": "function",
  "ctxName": "sync$",
  "captures": false,
  "loc": [
    125,
    213
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Li10Dm7YKnw = ()=>import("./test.tsx_component_input_onClick_sync_Li10Dm7YKnw");
const i_Hp6rAUCNYXQ = ()=>import("./test.tsx_component_input_onClick_1_sync_Hp6rAUCNYXQ");
const i_BShSpVtqLBE = ()=>import("./test.tsx_component_input_onClick_2_sync_BShSpVtqLBE");
const i_ZUK1E201Ins = ()=>import("./test.tsx_component_ZUK1E201Ins");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ZUK1E201Ins, "component_ZUK1E201Ins"));


None
== DIAGNOSTICS ==

[]
