optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_optimization_issue_3795.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const Issue3795 = component$(() => {
	let base = "foo";
	const firstAssignment = base;
	base += "bar";
	const secondAssignment = base;
	return (
		<div id='issue-3795-result'>{firstAssignment} {secondAssignment}</div>
	)
	});

============================= example_optimization_issue_3795.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Issue3795_component_TM6XuigdMPg = () => import("./example_optimization_issue_3795.tsx_Issue3795_component_TM6XuigdMPg.js");
export const Issue3795 = componentQrl(qrl(i_Issue3795_component_TM6XuigdMPg, "Issue3795_component_TM6XuigdMPg"));


None
============================= ./example_optimization_issue_3795.tsx_Issue3795_component_TM6XuigdMPg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const Issue3795_component_TM6XuigdMPg = () => {
	let base = "foo";
	const firstAssignment = base;
	base += "bar";
	const secondAssignment = base;
	return /*#__PURE__*/ _jsxSorted("div", null, { id: "issue-3795-result" }, [firstAssignment, secondAssignment], 1, null);
};


None
/*
{
  "origin": "example_optimization_issue_3795.tsx",
  "name": "Issue3795_component_TM6XuigdMPg",
  "entry": "entry_segments",
  "displayName": "example_optimization_issue_3795.tsx_Issue3795_component",
  "hash": "TM6XuigdMPg",
  "canonicalFilename": "example_optimization_issue_3795.tsx_Issue3795_component_TM6XuigdMPg",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Issue3795_component_TM6XuigdMPg",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
