optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_optimization_issue_4386.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const FOO_MAPPING = {
	A: 1,
	B: 2,
	C: 3,
	};

	export default component$(() => {
	const key = 'A';
	const value = FOO_MAPPING[key];

	return <>{value}</>;
	});

============================= test.tsx_component_ZUK1E201Ins.tsx (ENTRY POINT)==

import { FOO_MAPPING } from "./test";
export const component_ZUK1E201Ins = ()=>{
	const key = "A";
	const value = FOO_MAPPING[key];
	return <>{value}</>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_ZUK1E201Ins",
  "entry": "entry_segments",
  "displayName": "test.tsx_component",
  "hash": "ZUK1E201Ins",
  "canonicalFilename": "test.tsx_component_ZUK1E201Ins",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    128,
    212
  ]
}
*/
============================= test.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ZUK1E201Ins = ()=>import("./test.tsx_component_ZUK1E201Ins");
export const FOO_MAPPING = {
	A: 1,
	B: 2,
	C: 3
};
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ZUK1E201Ins, "component_ZUK1E201Ins"));


None
== DIAGNOSTICS ==

[]
