optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_parsed_inlined_qrls.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { componentQrl, inlinedQrl, useStore, jsxs, jsx, useLexicalScope } from '@qwik.dev/core';

export const App = /*#__PURE__*/ componentQrl(inlinedQrl(()=>{
	useStyles$(inlinedQrl(STYLES, "STYLES_odz7dfdfdM"));
	useStyles$(inlinedQrl(STYLES, "STYLES_odzdfdfdM"));

	const store = useStore({
		count: 0
	});
	return /*#__PURE__*/ jsxs("div", {
		children: [
			/*#__PURE__*/ jsxs("p", {
				children: [
					"Count: ",
					store.count
				]
			}),
			/*#__PURE__*/ jsx("p", {
				children: /*#__PURE__*/ jsx("button", {
					onClick$: inlinedQrl(()=>{
						const [store] = useLexicalScope();
						return store.count++;
					}, "App_component_div_p_button_onClick_odz7eidI4GM", [
						store
					]),
					children: "Click"
				})
			})
		]
	});
}, "App_component_Fh88JClhbC0"));

export const STYLES = ".red { color: red; }";

============================= test.tsx ==

import { componentQrl, inlinedQrl, jsx, jsxs, qrl, useLexicalScope, useStylesQrl } from "@qwik.dev/core";
const i_5oneJzcZfTU = ()=>import("./test.tsx_s_5oneJzcZfTU");
const i_jQBSdVxi2GA = ()=>import("./test.tsx_s_jQBSdVxi2GA");
export const App = /*#__PURE__*/ componentQrl(inlinedQrl(()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_5oneJzcZfTU, "s_5oneJzcZfTU"));
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_jQBSdVxi2GA, "s_jQBSdVxi2GA"));
	const store = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_jQBSdVxi2GA, "s_jQBSdVxi2GA"));
	return /*#__PURE__*/ jsxs("div", { children: [/*#__PURE__*/ jsxs("p", { children: ["Count: ", store.count] }), /*#__PURE__*/ jsx("p", { children: /*#__PURE__*/ jsx("button", {
		onClick$: inlinedQrl(()=>{
			const [store] = useLexicalScope();
			return store.count++;
		}, "App_component_div_p_button_onClick_odz7eidI4GM", [store]),
		children: "Click"
	}) })] });
}, "App_component_Fh88JClhbC0"));
export const STYLES = ".red { color: red; }";


None
============================= test.tsx_s_5oneJzcZfTU.tsx (ENTRY POINT)==

import { inlinedQrl } from "@qwik.dev/core";
export const s_5oneJzcZfTU = inlinedQrl(STYLES, "STYLES_odz7dfdfdM");


None
/*
{
  "origin": "test.tsx",
  "name": "s_5oneJzcZfTU",
  "entry": "entry_segments",
  "displayName": "test_App_componentQrl_inlinedQrl_useStyles",
  "hash": "5oneJzcZfTU",
  "canonicalFilename": "test.tsx_s_5oneJzcZfTU",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    173,
    212
  ]
}
*/
============================= test.tsx_s_jQBSdVxi2GA.tsx (ENTRY POINT)==

const i_5oneJzcZfTU = ()=>import("./test.tsx_s_5oneJzcZfTU");
export const s_jQBSdVxi2GA = useStylesQrl(i_5oneJzcZfTU, "s_5oneJzcZfTU");


None
/*
{
  "origin": "test.tsx",
  "name": "s_jQBSdVxi2GA",
  "entry": "entry_segments",
  "displayName": "test_App_componentQrl_inlinedQrl_useStyles_1",
  "hash": "jQBSdVxi2GA",
  "canonicalFilename": "test.tsx_s_jQBSdVxi2GA",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    227,
    265
  ]
}
*/
== DIAGNOSTICS ==

[]
