optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_preserve_filenames_segments.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	foo();
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

export const foo = () => console.log('foo');

============================= ./example_preserve_filenames_segments.tsx_App_component_22Rj57rU0QQ.js (ENTRY POINT)==

import{_jsxSorted,qrl}from"@qwik.dev/core";export const App_component_22Rj57rU0QQ=props=>(foo(),_jsxSorted(Cmp,null,null,/* @__PURE__ */ _jsxSorted(`p`,{on:click:qrl(()=>import(`./example_preserve_filenames_segments.tsx.js`),`App_component_Cmp_p_onClick`)},{class:`stuff`},`Hello Qwik`,3,null),3,null));

None
/*
{
  "origin": "example_preserve_filenames_segments.tsx",
  "name": "App_component_22Rj57rU0QQ",
  "entry": null,
  "displayName": "example_preserve_filenames_segments.tsx_App_component",
  "hash": "22Rj57rU0QQ",
  "canonicalFilename": "example_preserve_filenames_segments.tsx_App_component_22Rj57rU0QQ",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "App_component_22Rj57rU0QQ",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_preserve_filenames_segments.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export const App=componentQrl(qrl(()=>import(`./example_preserve_filenames_segments.tsx_App_component_22Rj57rU0QQ.js`),`App_component_22Rj57rU0QQ`));export const foo=()=>console.log(`foo`);

None
== DIAGNOSTICS ==

[]
